--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
+
 <body>
+    <main>
+        <h1>My Favorite Things</h1>
+        <img src="IMG_0925.JPG" alt="Jared head shot" width="225px" height="250px" border="2px">
+        <h2>My Top Movies</h2>
+        <ol>
+            <li>Star Wars - Return of the Jedi</li>
+            <li>Raising Arizona</li>
+            <li>The Big Lebowski</li>
+            <li>Napoleon Dynamite</li>
+            <li>James Bond - All old and most new</li>
+        </ol>
+        <h2>My Favorite Places to Visit</h2>
+        <ul>
+            <li>Berkshire Massachusetts</li>
+            <li>East Tennessee</li>
+            <li>Florida</li>
+            <li>Oregon</li>
+            <li>YellowStone National Park</li>
+            <li>Peru</li>
+        </ul>
+
+        <a href="https://www.linkedin.com/in/jared-barnes-1086895/">LinkedIn</a>
+
+    </main>
 </body>
+
 </html>
